--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Snake Game</h1>
     <canvas id="gameCanvas"></canvas>
+    <div id="scores">Score: 0</div>
     <script src="script.js"></script>
 </body>
 </html>
